-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0, Some future release
-
None
-
xcb platform plugin
-
3192cd88c569b1052c74981329248fbc60f98535
At both QWindowSystemInterface::handleExtendedKeyEvent calls (in qxcbkeyboard.cpp) the transmission of the native keysym is missing.
Change:
QWindowSystemInterface::handleExtendedKeyEvent(window, time, type, qtcode, modifiers,
code, 0, state, string.left(count), isAutoRepeat);
to:
QWindowSystemInterface::handleExtendedKeyEvent(window, time, type, qtcode, modifiers,
code, sym, state, string.left(count), isAutoRepeat);
and:
QWindowSystemInterface::handleExtendedKeyEvent(window, time, QEvent::KeyPress, qtcode, modifiers,
code, 0, state, string.left(count), isAutoRepeat);
to:
QWindowSystemInterface::handleExtendedKeyEvent(window, time, QEvent::KeyPress, qtcode, modifiers,
code, sym, state, string.left(count), isAutoRepeat);
should fix this. Now QKeyEvent::nativeVirtualKey() should no longer return 0 if any key is pressed.